update the UI to add another scan button for color